# todos

./: .env  .gitignore  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  entrypoint.sh
backend/.sqlx/: query-885050b56c6123f3a6e78f184c5567948c2ddc689918aeabd51f787fb5c9475e.json  query-948c138fd3964afe2d5424141953684d3561240c936dde653c11186fea680c0e.json  query-b469472dc8969a21df66367334f64c627ac9eee549394aec7506bb9236f25376.json  query-c33865d4ca5eb4f05a8556a03df6a4c0b35377c0389873969398685224c785f6.json
backend/migrations/: 20240810164002_foundation.sql
backend/src/: main.rs
backend/src/postgres/: app_state.rs  mod.rs  routes.rs  store.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/services/actions/: todo.ts
frontend/src/components/: add-todo-form.tsx  alert-modal.tsx  client.tsx  todo-app.tsx  todo-item.tsx  todo-list.tsx
frontend/src/components/ui/: modal.tsx
frontend/src/hooks/: use-selected-todo.tsx  use-todo-modal.tsx  use-todos.tsx
frontend/src/providers/: toast-provider.tsx
nginx/conf.d/: default.conf
